--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- footer -->
     <footer>
-      <p>&copy; 2025 webDev All rights reserved.</p>
+      <p>&copy; 2025 All rights reserved.</p>
       <div class="social-links">
         <a href="https://github.com/Maulik1804"
           ><i class="fa-brands fa-github"></i
